# acwc-website

./: .gitignore  Cargo.toml  Config.default.toml  README.md  Rocket.toml
public/error/: 400.html  404.html  500.html
public/styles/: main.css
src/: config.rs  db.rs  lichess.rs  main.rs  session.rs
templates/: accessdenied.html.tera  admin.html.tera  adminreview.html.tera  base.html.tera  home.html.tera  home_registrationclosed.html.tera  home_registrationopen.html.tera  qualification.html.tera  redirect.html.tera  registered.html.tera  registrationform.html.tera  rules2019.html.tera  rules2020.html.tera
